# fluxdm

./: .gitignore  README.md  index.html  package-lock.json  package.json  run  tailwind.config.ts  vite.config.ts
extension/: background.js  content.js  install.ps1  install.sh  manifest.json  popup.html  popup.js
extension/native-manifest/: com.fluxdm.host.firefox.json  com.fluxdm.host.json
scripts/: install-extension.ps1  install-extension.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  tray.rs  utils.rs
src-tauri/src/ai/: categorizer.rs  duplicate.rs  llm.rs  mod.rs  renamer.rs  threat.rs
src-tauri/src/bridge/: mod.rs  native_host.rs
src-tauri/src/engine/: control.rs  crawler.rs  dash.rs  downloader.rs  hls.rs  http.rs  merger.rs  mod.rs  queue.rs  rate.rs  resume.rs  scheduler.rs  segment.rs  shutdown.rs  stream.rs  throttle.rs  torrent.rs
src-tauri/src/server/: mod.rs
src-tauri/src/storage/: db.rs  schema.sql
src/components/: AddDialog.tsx  AnalyticsDashboard.tsx  DetailPanel.tsx  DownloadItem.tsx  DownloadList.tsx  DownloadTable.tsx  ProgressBar.tsx  QueuePanel.tsx  SettingsPanel.tsx  Sidebar.tsx  SiteGrabber.tsx  StatusBar.tsx  StatusPill.tsx  StreamPicker.tsx  ThreatBadge.tsx  Toolbar.tsx
src/hooks/: useTauriEvents.ts
src/store/: downloadStore.ts
src/types/: index.ts
