[package]
name = "fluxdm"
version = "0.1.0"
description = "FluxDM — Modern Parallel Download Manager"
authors = ["FluxDev"]
edition = "2021"
default-run = "fluxdm"

[lib]
name = "fluxdm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# ── Native Messaging Host binary ──────────────────────────────────────────────
# Compiled separately; shipped alongside the Tauri app.
# Bridges Chrome/Firefox native messaging ↔ FluxDM HTTP server.
[[bin]]
name   = "fluxdm-host"
path   = "src/bin/native_host.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri              = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"

# HTTP server — browser extension fallback and IPC for native host
axum        = { version = "0.7", default-features = false, features = ["tokio", "http1", "json", "macros"] }
tower-http  = { version = "0.5", features = ["cors"] }

# Async runtime
tokio   = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP client — streaming, compression, cookie support
reqwest = { version = "0.12", features = ["stream", "gzip", "brotli", "cookies", "json"] }

# SQLite (bundled = no system libsqlite3 required)
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# Hashing
sha2 = "0.10"

# IDs
uuid = { version = "1", features = ["v4"] }

# Error handling
anyhow = "1"

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
bytes    = "1"
tempfile = "3"
regex    = "1"
chrono   = { version = "0.4", features = ["serde"] }

[profile.dev]
opt-level = 1          # Faster builds in dev

[profile.release]
opt-level  = "z"       # Optimize for binary size
lto        = true
codegen-units = 1
panic      = "abort"
strip      = true
